@@ -1,9 +1,13 @@
 ikiwiki (3.20141016.1) UNRELEASED; urgency=medium
 
+  [ Joey Hess ]
   * Add missing build-depends on libcgi-formbuilder-perl, needed for
     t/relativity.t
   * Set Debian package maintainer to Simon McVittie as I'm retiring from
     Debian.
+
+  [ Amitai Schlair ]
+  * blogspam: use the 2.0 JSON API (the 1.0 XML-RPC API has been EOL'd).
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Oct 2014 12:04:49 -0400
 
